# Hackathon-Team-13

./: .env.example  .gitignore  README.md  db.py  llm.py  mastery.py  package-lock.json  pyproject.toml  requirements.txt  vite.config.ts
api/: index.py
client/: package-lock.json  package.json  vite.config.ts
client/src/: routeTree.gen.ts  theme.ts
client/src/components/: AppHeader.style.ts  AppHeader.tsx
client/src/lib/: api.ts  file-utils.ts
client/src/routes/: __root.tsx  history.style.ts  history.tsx  home.style.ts  home.tsx  index.style.ts  index.tsx  new.style.ts  new.tsx  review.$id.style.ts  review.$id.tsx  students.$id.tsx  teacherHome.tsx
server/app/: config.py  dependencies.py  main.py
server/app/ai/: llm.py  prompts.py
server/app/routers/: tutor.py
server/app/schemas/: tutor.py
server/app/services/: context_service.py  profile_service.py  tutor_ai_service.py
server/app/utils/: conversation_paths.py
server/tests/: test_smoke.py
src/: routeTree.gen.ts  styles.css
src/lib/: api.ts
src/routes/: index.style.ts  index.tsx
static/: app.js  style.css
templates/: onboarding.html  tutor.html
