# Vercel's Python build uses `uv` whenever a pyproject.toml exists, so this must
# be a valid PEP 621 project (deps under [project]) — not just [tool.vercel].
# Keep dependencies in sync with requirements.txt (CI / local pip still use it).
[project]
name = "ai-math-tutor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "jinja2",
    "python-multipart",
    "psycopg[binary]",
    "google-genai",
]

[tool.uv]
# Install dependencies only; don't try to build this repo as a package.
package = false

# Routing is handled by the catch-all rewrite in vercel.json (every path -> the
# /api/index function, which runs the FastAPI app). We don't rely on Vercel's
# FastAPI framework auto-detection (the project's framework preset is null).
